--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
               For questions, collaboration ideas, or brand inquiries.
             </p>
             <p class="card-snippet" style="margin-top: 0.4rem;">
-              <strong>Email:</strong> <span>youremail@example.com</span>
+              <strong>Email:</strong> <span>laurelsorganizedchaos@gmail.com</span>
               <!-- Replace with your real email when you're ready -->
             </p>
           </article>
@@ -151,3 +151,4 @@
   </script>
 </body>
 </html>
+
