--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
               There’s a special kind of grief that comes with realizing the life you built
               isn’t actually yours anymore. This is about letting it burn — on purpose.
             </p>
-            <button class="card-link">Read Post</button>
+            <a href="post-burn-it-down.html" class="card-link">Read Post</a>
           </article>
 
           <!-- Post 2 -->
@@ -166,3 +166,4 @@
   </script>
 </body>
 </html>
+
