--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
               Starting over isn’t always loud or dramatic. Sometimes it’s a quiet decision
               to choose yourself in a hundred tiny ways no one else sees.
             </p>
-            <button class="card-link">Read Post</button>
+            <a href="post-softness-starting-over.html" class="card-link">Read Post</a>
           </article>
 
           <!-- Post 3 -->
@@ -166,4 +166,5 @@
   </script>
 </body>
 </html>
+
 
