--- a/blog.html
+++ b/blog.html
@@ -103,7 +103,7 @@
               Your worth has never been tied to how productive you are. This one is for the
               days when getting out of bed is the win.
             </p>
-            <button class="card-link">Read Post</button>
+            <a href="post-organized-chaos.html" class="card-link">Read Post</a>
           </article>
 
           <!-- Post 4 -->
@@ -166,6 +166,7 @@
   </script>
 </body>
 </html>
+
 
 
 
