--- a/blog.html
+++ b/blog.html
@@ -114,7 +114,7 @@
               Loving your kids fiercely while admitting this shit is hard. No Pinterest
               perfection, just real feelings and real exhaustion.
             </p>
-            <button class="card-link">Read Post</button>
+           <a href="post-motherhood-without-the-mask.html" class="card-link">Read Post</a>
           </article>
 
           <!-- Post 5 -->
@@ -166,6 +166,7 @@
   </script>
 </body>
 </html>
+
 
 
 
