--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
           </article>
         </div>
       </section>
+      <!-- Latest Blog Posts (auto-filled by script.js) -->
+      <section class="section">
+        <div class="section-header-row">
+          <h3 class="section-title">Latest from the Blog</h3>
+          <a href="blog.html" class="section-link">Read all posts →</a>
+        </div>
+        
+        <div id="latest-posts" class="card-grid">
+          <!-- Cards will be injected here by script.js -->
+        </div>
+      </section>
 
       <!-- Featured Store -->
       <section class="section">
@@ -148,3 +159,4 @@
             <h4 class="card-title">Witchy Wallpapers</h4>
             <p class="card-snippet">
               A pack of dark, feminine, aesthetic phone wallpapers to keep the
+
