--- a/blog.html
+++ b/blog.html
@@ -36,139 +36,24 @@
 
     <main>
 
-      <!-- Intro -->
+      <!-- Blog Intro -->
       <section class="section">
         <h2 class="section-title">The Chaos Diaries</h2>
         <p class="section-text">
-          This is where the messy, honest, witchy parts of my brain live in words.
-          Stories about starting over, motherhood, mental health, identity, and
-          building a life that’s both dark and soft at the same time.
+          A raw, witchy, unfiltered collection of my thoughts, stories, healing moments,
+          and chaotic life lessons. Written for the girls balancing softness and darkness,
+          motherhood and burnout, rebuilding and unraveling — all at the same time.
         </p>
         <p class="section-text" style="margin-top: 0.8rem;">
-          Some posts are gentle. Some are raw. Some are just me processing out loud.
-          Read what you need, leave what you don’t, and remember you’re not the only
-          one trying to make sense of your own organized chaos.
+          These posts are honest, emotional, and sometimes messy — just like real life.
+          Read what speaks to you, leave what doesn’t, and remember you’re not alone in
+          the chaos.
         </p>
       </section>
 
-      <!-- Filters (visual only for now) -->
+      <!-- Auto-filled Blog Grid -->
       <section class="section">
-        <div class="section-header-row">
-          <h3 class="section-title">Browse by Vibe</h3>
-        </div>
+        <h3 class="section-title">All Posts</h3>
 
-        <div class="blog-filters">
-          <button class="filter-pill filter-pill-active">All</button>
-          <button class="filter-pill">Life</button>
-          <button class="filter-pill">Self</button>
-          <button class="filter-pill">Mom Life</button>
-          <button class="filter-pill">Mental Health</button>
-          <button class="filter-pill">Growth &amp; Healing</button>
-        </div>
-      </section>
-
-      <!-- Posts grid -->
-      <section class="section">
-        <h3 class="section-title">Latest Posts</h3>
-
-        <div class="card-grid">
-
-          <!-- Post 1 -->
-          <article class="card">
-            <p class="card-tag">Life</p>
-            <h4 class="card-title">Burn It Down: When Your Old Life Doesn’t Fit</h4>
-            <p class="card-snippet">
-              There’s a special kind of grief that comes with realizing the life you built
-              isn’t actually yours anymore. This is about letting it burn — on purpose.
-            </p>
-            <a href="post-burn-it-down.html" class="card-link">Read Post</a>
-          </article>
-
-          <!-- Post 2 -->
-          <article class="card">
-            <p class="card-tag">Self</p>
-            <h4 class="card-title">The Softness in Starting Over</h4>
-            <p class="card-snippet">
-              Starting over isn’t always loud or dramatic. Sometimes it’s a quiet decision
-              to choose yourself in a hundred tiny ways no one else sees.
-            </p>
-            <a href="post-softness-starting-over.html" class="card-link">Read Post</a>
-          </article>
-
-          <!-- Post 3 -->
-          <article class="card">
-            <p class="card-tag">Mental Health</p>
-            <h4 class="card-title">Organized Chaos: Brains, Burnout &amp; Being Human</h4>
-            <p class="card-snippet">
-              Your worth has never been tied to how productive you are. This one is for the
-              days when getting out of bed is the win.
-            </p>
-            <a href="post-organized-chaos.html" class="card-link">Read Post</a>
-          </article>
-
-          <!-- Post 4 -->
-          <article class="card">
-            <p class="card-tag">Mom Life</p>
-            <h4 class="card-title">Motherhood Without the Mask</h4>
-            <p class="card-snippet">
-              Loving your kids fiercely while admitting this shit is hard. No Pinterest
-              perfection, just real feelings and real exhaustion.
-            </p>
-           <a href="post-motherhood-without-the-mask.html" class="card-link">Read Post</a>
-          </article>
-
-          <!-- Post 5 -->
-          <article class="card">
-            <p class="card-tag">Growth &amp; Healing</p>
-            <h4 class="card-title">When Healing Feels Like Regression</h4>
-            <p class="card-snippet">
-              Sometimes going back to old patterns is part of moving forward. Healing isn’t
-              linear — it’s weird, looping, and still worth it.
-            </p>
-            <button class="card-link">Read Post</button>
-          </article>
-
-          <!-- Post 6 -->
-          <article class="card">
-            <p class="card-tag">Life</p>
-            <h4 class="card-title">Existing Is Enough Some Days</h4>
-            <p class="card-snippet">
-              This one’s for the days when the only thing you accomplished was breathing,
-              feeding yourself, or not giving up. That counts.
-            </p>
-            <button class="card-link">Read Post</button>
-          </article>
-
-        </div>
-      </section>
-
-      <!-- Future single-post note (for you) -->
-      <section class="section">
-        <h3 class="section-title">Behind the Scenes</h3>
-        <p class="section-text">
-          Later, we can create separate pages for each full blog post and link these cards
-          to them. For now, this page works as your blog “home” — a place people can scroll,
-          see your topics, and get a feel for your writing.
-        </p>
-      </section>
-
-    </main>
-
-    <!-- Footer -->
-    <footer class="site-footer">
-      <p>© <span id="year"></span> Laurel's Organized Chaos · It’s your life, everyone else is just in it.</p>
-    </footer>
-
-  </div>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
-
-
-
-
-
-
+        <div id="blog-posts" class="card-grid">
+          <!-- Blo
