--- a/blog.html
+++ b/blog.html
@@ -56,4 +56,22 @@
         <h3 class="section-title">All Posts</h3>
 
         <div id="blog-posts" class="card-grid">
-          <!-- Blo
+          <!-- Blog cards will be inserted automatically by script.js -->
+        </div>
+      </section>
+
+    </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+      <p>© <span id="year"></span> Laurel's Organized Chaos · It’s your life, everyone else is just in it.</p>
+    </footer>
+
+  </div>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+  <script src="script.js"></script>
+</body>
+</html>
