--- a/store.html
+++ b/store.html
@@ -58,12 +58,13 @@
         </div>
 
         <div class="blog-filters">
-          <button class="filter-pill filter-pill-active">All</button>
-          <button class="filter-pill">Digital Art</button>
-          <button class="filter-pill">Journals</button>
-          <button class="filter-pill">Wallpapers</button>
-          <button class="filter-pill">Bundle</button>
-          <button class="filter-pill">Other</button>
+          <button class="filter-pill filter-pill-active" type="button">All</button>
+          <button class="filter-pill" type="button">Drinkware</button>
+          <button class="filter-pill" type="button">Digital Art</button>
+          <button class="filter-pill" type="button">Journals</button>
+          <button class="filter-pill" type="button">Wallpapers</button>
+          <button class="filter-pill" type="button">Bundle</button>
+          <button class="filter-pill" type="button">Other</button>
         </div>
       </section>
 
@@ -80,18 +81,18 @@
       <section class="section">
         <h3 class="section-title">Coming Later</h3>
         <p class="section-text">
-          Eventually, this shop can connect to real payment + delivery options
-          (like Etsy, a print-on-demand service, or a full e-commerce setup).
-          For now, this page is your visual storefront — a place to shape how
-          you want Laurel’s Organized Chaos to live as a brand.
+          Eventually, this shop can connect to more products and deeper setups:
+          multiple Printful + Printify items, full collections, and maybe even
+          a proper on-site cart. For now, this page is your visual storefront —
+          a place to shape how you want Laurel’s Organized Chaos to live as a brand.
         </p>
         <p class="section-text" style="margin-top: 0.8rem;">
-          When you’re ready, we can:
+          As you add more products, we’ll:
         </p>
         <ul class="section-text" style="list-style: disc; padding-left: 1.2rem; margin-top: 0.1rem;">
-          <li>Link each product to Etsy or another shop platform.</li>
-          <li>Turn this into a real cart + checkout flow.</li>
-          <li>Add more product categories like apparel, mugs, or physical journals.</li>
+          <li>Give each item its own “Buy Now” link.</li>
+          <li>Group products into categories (hoodies, prints, mugs, etc.).</li>
+          <li>Refine the layout so it feels like a full boutique.</li>
         </ul>
       </section>
 
