--- a/blog.html
+++ b/blog.html
@@ -44,20 +44,19 @@
           and chaotic life lessons. Written for the girls balancing softness and darkness,
           motherhood and burnout, rebuilding and unraveling — all at the same time.
         </p>
+
         <p class="section-text" style="margin-top: 0.8rem;">
           These posts are honest, emotional, and sometimes messy — just like real life.
-          Read what speaks to you, leave what doesn’t, and remember you’re not alone in
-          the chaos.
+          Read what speaks to you, leave what doesn’t, and remember you’re not alone in the chaos.
         </p>
       </section>
 
-      <!-- Auto-filled Blog Grid -->
+      <!-- Blog Grid -->
       <section class="section">
         <h3 class="section-title">All Posts</h3>
 
-        <div id="blog-posts" class="card-grid">
-          <!-- Blog cards will be inserted automatically by script.js -->
-        </div>
+        <!-- Cards auto-inserted by script.js -->
+        <div id="blog-posts" class="card-grid"></div>
       </section>
 
     </main>
