--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <title>Laurel's Organized Chaos | About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Same fonts as Home (we can swap to Belion Radego later) -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -150,7 +150,7 @@
       <section class="section">
         <h3 class="section-title">A Few Things About Me</h3>
         <ul class="section-text" style="list-style: disc; padding-left: 1.2rem; margin-top: 0.1rem;">
-          <li>I live in a life that’s part circus, part haunted house, and part cozy nest.</li>
+          <li>I live a life that’s part circus, part haunted house, and part cozy nest.</li>
           <li>I’m a full-time student, juggling assignments with snacks, naps, and mini-crises.</li>
           <li>I take my mental health seriously and still use dark humor to survive it.</li>
           <li>My aesthetic is: cute goth, soft witch, emotionally exhausted but trying.</li>
