--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,9 @@
               For questions, collaboration ideas, or brand inquiries.
             </p>
             <p class="card-snippet" style="margin-top: 0.4rem;">
-              <strong>Email:</strong> <span>laurelsorganizedchaos@gmail.com</span>
-              <!-- Replace with your real email when you're ready -->
+              <strong>Email:</strong>
+              <a href="mailto:laurelsorganizedchaos@gmail.com">laurelsorganizedchaos@gmail.com</a>
+              <!-- Update this address anytime you want -->
             </p>
           </article>
 
@@ -151,4 +152,3 @@
   </script>
 </body>
 </html>
-
