--- a/index.html
+++ b/index.html
@@ -48,15 +48,9 @@
           </p>
 
           <div class="hero-actions">
-            <a href="store.html" class="btn btn-coffin">
-              <span>Shop the Chaos</span>
-            </a>
-            <a href="blog.html" class="btn btn-ghost">
-              <span>Read the Chaos Diaries</span>
-            </a>
-            <a href="about.html" class="btn btn-outline">
-              <span>About Laurel</span>
-            </a>
+            <a href="store.html" class="btn btn-coffin"><span>Shop the Chaos</span></a>
+            <a href="blog.html" class="btn btn-ghost"><span>Read the Chaos Diaries</span></a>
+            <a href="about.html" class="btn btn-outline"><span>About Laurel</span></a>
           </div>
         </div>
 
@@ -115,7 +109,7 @@
         </div>
       </section>
 
-      <!-- Latest Blog Posts (auto-filled by script.js) -->
+      <!-- Latest Blog Posts -->
       <section class="section">
         <div class="section-header-row">
           <h3 class="section-title">Latest from the Blog</h3>
@@ -123,7 +117,7 @@
         </div>
 
         <div id="latest-posts" class="card-grid">
-          <!-- Cards will be injected here by script.js -->
+          <!-- Cards injected via script.js -->
         </div>
       </section>
 
@@ -137,32 +131,32 @@
         <div class="card-grid">
 
           <article class="card product-card">
-            <p class="card-tag">Digital</p>
-            <h4 class="card-title">Gothic Art Prints</h4>
+            <p class="card-tag">Drinkware</p>
+            <h4 class="card-title">Trauma & Caffeine Mug</h4>
             <p class="card-snippet">
-              Dark feminine artwork for your wall, your phone, and your soul.
+              Full-wrap gothic mug for exhausted witches, moms, and chaotic humans.
             </p>
-            <button class="card-link">View Details</button>
+            <a class="card-link" href="https://laurelsorganizedchaos.printful.me/product/running-on-trauma-and-caffeine-gothic-mug-15oz-wrap"
+               target="_blank" rel="noopener noreferrer">Buy Now</a>
           </article>
 
           <article class="card product-card">
-            <p class="card-tag">Self-Growth</p>
-            <h4 class="card-title">Shadow Work Journal</h4>
+            <p class="card-tag">Totes</p>
+            <h4 class="card-title">Witchy Mom Chaos Tote</h4>
             <p class="card-snippet">
-              A guided journal for those who aren’t afraid to sit with their
-              darkness and dig for truth.
+              A full-print tote covered in sarcastic quotes, crows, and witchy chaos.
             </p>
-            <button class="card-link">View Details</button>
+            <a class="card-link" href="https://laurelsorganizedchaos.printful.me/product/witchy-mom-chaos-tote"
+               target="_blank" rel="noopener noreferrer">Buy Now</a>
           </article>
 
           <article class="card product-card">
-            <p class="card-tag">Lifestyle</p>
-            <h4 class="card-title">Witchy Wallpapers</h4>
+            <p class="card-tag">Home</p>
+            <h4 class="card-title">Coming Soon</h4>
             <p class="card-snippet">
-              A pack of dark, feminine, aesthetic phone wallpapers to keep the
-              vibe with you everywhere.
+              More chaos, more magic, and more dark feminine creations are on the way.
             </p>
-            <button class="card-link">View Details</button>
+            <button class="card-link" disabled>Coming Soon</button>
           </article>
 
         </div>
