--- a/store.html
+++ b/store.html
@@ -51,7 +51,7 @@
         </p>
       </section>
 
-      <!-- Filters (visual only right now) -->
+      <!-- Filters (visual only for now) -->
       <section class="section">
         <div class="section-header-row">
           <h3 class="section-title">Browse by Category</h3>
@@ -60,12 +60,17 @@
         <div class="blog-filters">
           <button class="filter-pill filter-pill-active" type="button">All</button>
           <button class="filter-pill" type="button">Drinkware</button>
+          <button class="filter-pill" type="button">Tote Bags</button>
           <button class="filter-pill" type="button">Digital Art</button>
           <button class="filter-pill" type="button">Journals</button>
           <button class="filter-pill" type="button">Wallpapers</button>
           <button class="filter-pill" type="button">Bundle</button>
           <button class="filter-pill" type="button">Other</button>
         </div>
+        <p class="section-text" style="font-size: 0.8rem; margin-top: 0.6rem;">
+          Filters are visual for now — everything below is still clickable. We can wire real filtering
+          later once your product list grows.
+        </p>
       </section>
 
       <!-- Products grid (auto-filled by script.js) -->
@@ -79,20 +84,18 @@
 
       <!-- Future store plans -->
       <section class="section">
-        <h3 class="section-title">Coming Later</h3>
+        <h3 class="section-title">What’s Coming Next</h3>
         <p class="section-text">
-          Eventually, this shop can connect to more products and deeper setups:
-          multiple Printful + Printify items, full collections, and maybe even
-          a proper on-site cart. For now, this page is your visual storefront —
-          a place to shape how you want Laurel’s Organized Chaos to live as a brand.
+          This is just the start. As I build out Laurel’s Organized Chaos, this shop will grow into
+          a full collection of dark feminine tools, art, and cozy chaos decor.
         </p>
         <p class="section-text" style="margin-top: 0.8rem;">
-          As you add more products, we’ll:
+          As more products drop, we’ll:
         </p>
         <ul class="section-text" style="list-style: disc; padding-left: 1.2rem; margin-top: 0.1rem;">
-          <li>Give each item its own “Buy Now” link.</li>
-          <li>Group products into categories (hoodies, prints, mugs, etc.).</li>
-          <li>Refine the layout so it feels like a full boutique.</li>
+          <li>Connect more Printful / Printify items like blankets, hoodies, and prints.</li>
+          <li>Organize everything into clear categories (mugs, totes, digital, home, etc.).</li>
+          <li>Refine this page so it feels like a full gothic boutique, not just a product list.</li>
         </ul>
       </section>
 
