--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,13 @@
   <title>Laurel's Organized Chaos | Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Gothic heading font -->
+<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+
+<!-- Clean body font -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,3 +81,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
